# BLMapEditor

./: .gitignore  README.md  __init__.py  canvasutils.py  commands.py  editor.py  inputmanager.py  maploader.py  prefabbuffer.py  pyproject.toml  selectedobject.py  settings.py  undo_redo.py
Maps/: README.md
blmapeditor/: __init__.py  editor.py  inputmanager.py  packagemanager.py  prefabbuffer.py  pyproject.toml  selectedobject.py  settings.json  settings.py
blmapeditor/Maps/: parkour.json
blmapeditor/Prefabs/: README.md
blmapeditor/gui/: __init__.py  docking_area.py  menubar.py  packages.py  placeablelist.py  quicksettings.py  saveprefabmodal.py  statusbar.py  toolbar.py
blmapeditor/gui/placeables/: __init__.py  materials.py  metadata.py  prefab_parts.py  transform.py
blmapeditor/placeablehelpers/: AiPawnHelper.py  IObjectHelper.py  LightComponentHelper.py  PrefabHelper.py  SMCHelper.py  __init__.py  placeablehelper.py
blmapeditor/placeables/: __init__.py  interactiveobject.py  lightcomponent.py  pawn.py  placeable.py  prefab.py  staticmesh.py
gui/: __init__.py  menubar.py  placeablelist.py  quicksettings.py  saveprefabmodal.py  statusbar.py  toolbar.py
placeablehelper/: AiPawnHelper.py  IObjectHelper.py  LightComponentHelper.py  SMCHelper.py  __init__.py  interactivehelper.py  placeablehelper.py
placeablehelpers/: AiPawnHelper.py  IObjectHelper.py  LightComponentHelper.py  PrefabHelper.py  SMCHelper.py  __init__.py  placeablehelper.py
placeables/: __init__.py  interactiveobject.py  lightcomponent.py  model.py  pawn.py  placeable.py  prefab.py  (+1 more)
(+5 files in other folders)
